


add_executable(compNodeTest  controller/CompNodeTests.cpp)
target_link_libraries(compNodeTest network_shared_lib testingUtilsLib gtest gmock gtest_main)
enable_coverage_for_target(compNodeTest)
gtest_discover_tests(compNodeTest NO_PRETTY_TYPES NO_PRETTY_VALUES)




add_executable(benchServiceBench BenhcmarkRunnerBenchs.cpp)
target_link_libraries(benchServiceBench computationalNodeLib)
